--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>PIT Page</title>
 </head>
 <body>
-    
+    <div id="placeholder">
+        <h1>Under construction</h1><br>
+        <img src="https://static.wikia.nocookie.net/phineasandferb/images/b/b7/Building_Engeneer.gif/revision/latest?cb=20110323221219" alt="Wait what">
+    </div>
 </body>
 </html>
