Testing in prod :))))))

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="placeholder">
         <h1>Under construction</h1><br>
-        <img src="https://static.wikia.nocookie.net/phineasandferb/images/b/b7/Building_Engeneer.gif/revision/latest?cb=20110323221219" alt="Wait what">
+        <img src="https://static.wikia.nocookie.net/phineasandferb/images/b/b7/Building_Engeneer.gif" alt="Wait what">
     </div>
 </body>
 </html>
