WIP: Slight rework

--- a/src/pages/reservation-list.html
+++ b/src/pages/reservation-list.html
@@ -3,9 +3,11 @@
 </p>
 <table>
     <tr>
-      <th>Reservation ID</th>
-      <th>Car</th>
+      <th>Car Registration Nr.</th>
+      <th>Car Model</th>
       <th>User</th>
+      <th>Begin Date</th>
+      <th>Return Date</th>
       <th>Status</th>
       <th></th>
     </tr>
