--- a/src/pages/userlist.html
+++ b/src/pages/userlist.html
@@ -7,7 +7,7 @@
       <th>Name</th>
       <th>Surname</th>
       <th>License nr.</th>
-      <th>Status</th>
+      <th>Loyalty Status</th>
       <th></th>
     </tr>
     {{tableData}}
