--- a/src/pages/vehicle/catalog.html
+++ b/src/pages/vehicle/catalog.html
@@ -1,6 +1,7 @@
 <p>
     Vehicle catalogue
 </p>
+<button onclick="navigate('newvehicle')">Add car</button>
 <table>
     <tr>
       <th>Image</th>
