Reservation and user adding via Admin

--- a/src/pages/reservation/reservation-list.html
+++ b/src/pages/reservation/reservation-list.html
@@ -1,6 +1,7 @@
 <p>
     Reservation list
 </p>
+<button onclick ="location.href= './reservation/?id=new';">Add reservation</button>
 <table>
     <tr>
       <th>Car Registration Nr.</th>
