--- a/src/pages/user/user-list.html
+++ b/src/pages/user/user-list.html
@@ -1,12 +1,12 @@
 <p>
     User list
 </p>
+<button onclick ="location.href= './user/?id=new';">Add user</button>
 <table>
     <tr>
       <th>User ID</th>
       <th>Name</th>
       <th>Surname</th>
-      <th>License nr.</th>
       <th>Loyalty Status</th>
       <th></th>
     </tr>
