Feat: vehicle data editing

--- a/src/pages/vehicle/vehicle.html
+++ b/src/pages/vehicle/vehicle.html
@@ -44,14 +44,14 @@
             <option value="Available">Available</option>
             <option value="In Use">In Use</option>
             <option value="In Service">In Service</option>
-            <option value="Requires Inspection">In Service</option>
+            <option value="Requires Inspection">Requires Inspection</option>
         </select><br><br>
 
         <label for="notes">Notes</label><br>
         <input type="text" name="notes" placeholder="{{vehicleNotes}}"><br><br>
 
         <label for="image">Images (separate by comma)</label><br>
-        <input type="text" name="image" placeholder="{{vehicleImages}}"><br><br>
+        <input type="text" name="image" value="{{vehicleImages}}"><br><br>
         
         <button type="submit">Submit</button><br>
     </form>
