--- a/ui/index.html
+++ b/ui/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Car Rental System</title>
+  <title>AutoTev.lv</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#" onclick="navigate('home')">Home</a></li>
-      <li><a href="#" onclick="navigate('car-catalog')">Cars</a></li>
-      <li><a href="#" onclick="navigate('login')">Login</a></li>
-      <li><a href="#" onclick="navigate('register')">Register</a></li>
-    </ul>
-  </nav>
+  <div id="nav-placeholder"></div>
 
   <div id="content">
     <!-- Dynamic content will be injected here -->
   </div>
+
+  <div id="footer-placeholder"></div>
 
   <script src="app.js"></script>
 </body>
