--- a/ui/pages/register.html
+++ b/ui/pages/register.html
@@ -12,7 +12,7 @@
   <label for="password">Parole:</label>
   <input type="password" id="password" name="password" required>
   <br>
-  <label for="licenseNr">Licenses numurs:</label>
+  <label for="licenseNr">Vadītāja apliecības numurs:</label>
   <input type="text" id="licenseNr" name="licenseNr" required>
   <br>
   <!-- <label for="loyalty">Loyalitāte:</label>
