--- a/ui/index.html
+++ b/ui/index.html
@@ -16,5 +16,6 @@
   <div id="footer-placeholder"></div>
 
   <script src="app.js"></script>
+  <!-- <script type="module" src="app.js"></script> -->
 </body>
 </html>
