--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
 
   <div id="footer-placeholder"></div>
 
-  <script src="app.js"></script>
-  <!-- <script type="module" src="app.js"></script> -->
+  <!-- <script src="app.js"></script> -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
