Main page button routes to corresponding page.

--- a/ui/pages/home.html
+++ b/ui/pages/home.html
@@ -3,7 +3,7 @@
         <div class="main-page__section1__content">
             <h2 class="main-page__section1__content--heading1">Plašs automašīnu izīrēšanas klāsts un patīkamas cenas</h2>
             <h2 class="main-page__section1__content--heading2">patīkamas cenas</h2>
-            <button class="main-page__section1__content--button" type="button">
+            <button class="main-page__section1__content--button" onclick="navigate('car-list')" type="button">
                 <p class="main-page__section1__content--button-text">Izvēlies automašīnu</p>
             </button>
         </div>
