--- a/ui/pages/login.html
+++ b/ui/pages/login.html
@@ -1,10 +1,12 @@
-<h1>Pieslēgties</h1>
-<form id="login-form">
-  <label for="email">Epasts:</label>
-  <input type="email" id="email" name="email" required>
-  <br>
-  <label for="password">Parole:</label>
-  <input type="password" id="password" name="password" required>
-  <br>
-  <button type="submit">Pieslēgties</button>
-</form>
+<div class="form-container">
+  <h1>Pieslēgties</h1>
+  <form id="login-form">
+    <label for="email">Epasts:</label>
+    <input type="email" id="email" name="email" required>
+    <br>
+    <label for="password">Parole:</label>
+    <input type="password" id="password" name="password" required>
+    <br>
+    <button type="submit">Pieslēgties</button>
+  </form>
+</div>
