--- a/ui/pages/payment.html
+++ b/ui/pages/payment.html
@@ -1,10 +1,12 @@
-<h1>Maksājums</h1>
-<form id="payment-form">
-  <label for="bookingId">Maksājuma ID:</label>
-  <input type="text" id="bookingId" name="bookingId" required>
-  <br>
-  <label for="amount">Summa:</label>
-  <input type="number" id="amount" name="amount" required>
-  <br>
-  <button type="submit">Maksāt</button>
-</form>
+<div class="payment page-container">
+  <h1>Maksājums</h1>
+  <form id="payment-form">
+    <label for="bookingId">Maksājuma ID:</label>
+    <input type="text" id="bookingId" name="bookingId" required>
+    <br>
+    <label for="amount">Summa:</label>
+    <input type="number" id="amount" name="amount" required>
+    <br>
+    <button type="submit">Maksāt</button>
+  </form>
+</div>
