--- a/ui/pages/home.html
+++ b/ui/pages/home.html
@@ -2,7 +2,7 @@
     <section class="main-page__section1">
         <div class="main-page__section1__content">
             <h2 class="main-page__section1__content--heading1">Plašs automašīnu izīrēšanas klāsts un patīkamas cenas</h2>
-            <h2 class="main-page__section1__content--heading2">patīkamas cenas</h2>
+            <h2 class="main-page__section1__content--heading2">Rezervē tagad!</h2>
             <button class="main-page__section1__content--button" onclick="navigate('car-list')" type="button">
                 <p class="main-page__section1__content--button-text">Izvēlies automašīnu</p>
             </button>
